src/snapshots/purs_oxide__parser__tests__kind_signature_class.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            class Category :: forall k. (k -> k -> Type) -> Constraint\n        \"#))"
---
Located(
    SourceSpan {
        decl: Module(
            ModuleId {
                name: "Test",
            },
        ),
        start: 0,
        end: 77,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        decl: Module(
                            ModuleId {
                                name: "Test",
                            },
                        ),
                        start: 18,
                        end: 76,
                    },
                    Commented(
                        [],
                        KindSignature {
                            for_type: Class,
                            name: Symbol {
                                text: "Category",
                            },
                            kind: Located(
                                SourceSpan {
                                    decl: Module(
                                        ModuleId {
                                            name: "Test",
                                        },
                                    ),
                                    start: 36,
                                    end: 76,
                                },
                                ForAll {
                                    vars: [
                                        (
                                            Symbol {
                                                text: "k",
                                            },
                                            None,
                                        ),
                                    ],
                                    body: Located(
                                        SourceSpan {
                                            decl: Module(
                                                ModuleId {
                                                    name: "Test",
                                                },
                                            ),
                                            start: 46,
                                            end: 76,
                                        },
                                        FunctionType(
                                            Located(
                                                SourceSpan {
                                                    decl: Module(
                                                        ModuleId {
                                                            name: "Test",
                                                        },
                                                    ),
                                                    start: 46,
                                                    end: 62,
                                                },
                                                FunctionType(
                                                    Located(
                                                        SourceSpan {
                                                            decl: Module(
                                                                ModuleId {
                                                                    name: "Test",
                                                                },
                                                            ),
                                                            start: 47,
                                                            end: 48,
                                                        },
                                                        Var(
                                                            Symbol {
                                                                text: "k",
                                                            },
                                                        ),
                                                    ),
                                                    Located(
                                                        SourceSpan {
                                                            decl: Module(
                                                                ModuleId {
                                                                    name: "Test",
                                                                },
                                                            ),
                                                            start: 52,
                                                            end: 61,
                                                        },
                                                        FunctionType(
                                                            Located(
                                                                SourceSpan {
                                                                    decl: Module(
                                                                        ModuleId {
                                                                            name: "Test",
                                                                        },
                                                                    ),
                                                                    start: 52,
                                                                    end: 53,
                                                                },
                                                                Var(
                                                                    Symbol {
                                                                        text: "k",
                                                                    },
                                                                ),
                                                            ),
                                                            Located(
                                                                SourceSpan {
                                                                    decl: Module(
                                                                        ModuleId {
                                                                            name: "Test",
                                                                        },
                                                                    ),
                                                                    start: 57,
                                                                    end: 61,
                                                                },
                                                                TypeConstructor(
                                                                    QualifiedName {
                                                                        module: None,
                                                                        name: Symbol {
                                                                            text: "Type",
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                            Located(
                                                SourceSpan {
                                                    decl: Module(
                                                        ModuleId {
                                                            name: "Test",
                                                        },
                                                    ),
                                                    start: 66,
                                                    end: 76,
                                                },
                                                TypeConstructor(
                                                    QualifiedName {
                                                        module: None,
                                                        name: Symbol {
                                                            text: "Constraint",
                                                        },
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                    skolem_scope: None,
                                },
                            ),
                        },
                    ),
                ),
            ],
        },
    ),
)
