src/snapshots/purs_oxide__parser__tests__kind_signature_data.snap
---
source: src/parser.rs
expression: "parse_module(indoc!(r#\"\n            module Test where\n            data Foo :: Type\n            newtype Bar :: Type -> Type\n        \"#))"
---
Located(
    SourceSpan {
        start: 0,
        end: 63,
    },
    Commented(
        [],
        ModuleInner {
            name: ModuleId {
                [salsa id]: 0,
                name: "Test",
            },
            exports: None,
            imports: [],
            declarations: [
                Located(
                    SourceSpan {
                        start: 18,
                        end: 34,
                    },
                    Commented(
                        [],
                        Data {
                            type_: Data,
                            name: Symbol {
                                [salsa id]: 0,
                                text: "Foo",
                            },
                            params: [],
                            kind: Some(
                                Located(
                                    SourceSpan {
                                        start: 30,
                                        end: 34,
                                    },
                                    TypeConstructor(
                                        QualifiedName {
                                            [salsa id]: 0,
                                            module: None,
                                            name: Symbol {
                                                [salsa id]: 1,
                                                text: "Type",
                                            },
                                        },
                                    ),
                                ),
                            ),
                            constructors: [],
                        },
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 35,
                        end: 62,
                    },
                    Commented(
                        [],
                        Data {
                            type_: Newtype,
                            name: Symbol {
                                [salsa id]: 2,
                                text: "Bar",
                            },
                            params: [],
                            kind: Some(
                                Located(
                                    SourceSpan {
                                        start: 50,
                                        end: 62,
                                    },
                                    FunctionType(
                                        Located(
                                            SourceSpan {
                                                start: 50,
                                                end: 54,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    [salsa id]: 0,
                                                    module: None,
                                                    name: Symbol {
                                                        [salsa id]: 1,
                                                        text: "Type",
                                                    },
                                                },
                                            ),
                                        ),
                                        Located(
                                            SourceSpan {
                                                start: 58,
                                                end: 62,
                                            },
                                            TypeConstructor(
                                                QualifiedName {
                                                    [salsa id]: 0,
                                                    module: None,
                                                    name: Symbol {
                                                        [salsa id]: 1,
                                                        text: "Type",
                                                    },
                                                },
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                            constructors: [],
                        },
                    ),
                ),
            ],
        },
    ),
)
