src/snapshots/purs_oxide__parser__tests__lambda_infix.snap
---
source: src/parser.rs
expression: "parse_expr(\"1 + \\\\x -> y + 2\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 15,
    },
    Infix(
        Located(
            SourceSpan {
                start: 0,
                end: 1,
            },
            Literal(
                Integer(
                    1,
                ),
            ),
        ),
        [
            (
                Symbol(
                    QualifiedName {
                        symbol: Symbol {
                            [salsa id]: 0,
                            text: "+",
                        },
                        actually_qualified: false,
                    },
                ),
                Located(
                    SourceSpan {
                        start: 4,
                        end: 15,
                    },
                    Lam(
                        [
                            Located(
                                SourceSpan {
                                    start: 5,
                                    end: 6,
                                },
                                Var(
                                    Symbol {
                                        [salsa id]: 1,
                                        text: "x",
                                    },
                                ),
                            ),
                        ],
                        Located(
                            SourceSpan {
                                start: 10,
                                end: 15,
                            },
                            Infix(
                                Located(
                                    SourceSpan {
                                        start: 10,
                                        end: 11,
                                    },
                                    Var(
                                        QualifiedName {
                                            symbol: Symbol {
                                                [salsa id]: 2,
                                                text: "y",
                                            },
                                            actually_qualified: false,
                                        },
                                    ),
                                ),
                                [
                                    (
                                        Symbol(
                                            QualifiedName {
                                                symbol: Symbol {
                                                    [salsa id]: 0,
                                                    text: "+",
                                                },
                                                actually_qualified: false,
                                            },
                                        ),
                                        Located(
                                            SourceSpan {
                                                start: 14,
                                                end: 15,
                                            },
                                            Literal(
                                                Integer(
                                                    2,
                                                ),
                                            ),
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ),
                ),
            ),
        ],
    ),
)
