src/snapshots/purs_oxide__parser__tests__lambda_typed.snap
---
source: src/parser.rs
expression: "parse_expr(\"\\\\x -> 1 :: Int\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 14,
    },
    Lam(
        [
            Located(
                SourceSpan {
                    start: 1,
                    end: 2,
                },
                Var(
                    Symbol(
                        "x",
                    ),
                ),
            ),
        ],
        Located(
            SourceSpan {
                start: 6,
                end: 14,
            },
            Typed(
                Located(
                    SourceSpan {
                        start: 6,
                        end: 7,
                    },
                    Literal(
                        Integer(
                            1,
                        ),
                    ),
                ),
                Located(
                    SourceSpan {
                        start: 11,
                        end: 14,
                    },
                    TypeConstructor(
                        QualifiedName(
                            Symbol(
                                "Int",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
