src/snapshots/purs_oxide__parser__tests__let_1.snap
---
source: src/parser.rs
expression: "parse_expr(\"let x = 1 in x\")"
---
Located(
    SourceSpan {
        start: 0,
        end: 14,
    },
    Let {
        decls: [
            Located(
                SourceSpan {
                    start: 4,
                    end: 9,
                },
                Commented(
                    [],
                    ValueDeclaration(
                        ValueDeclaration {
                            ident: Symbol(
                                Id {
                                    value: 1,
                                },
                            ),
                            params: [],
                            expr: Unconditional(
                                Located(
                                    SourceSpan {
                                        start: 8,
                                        end: 9,
                                    },
                                    Literal(
                                        Integer(
                                            1,
                                        ),
                                    ),
                                ),
                            ),
                        },
                    ),
                ),
            ),
        ],
        body: Located(
            SourceSpan {
                start: 13,
                end: 14,
            },
            Var(
                QualifiedName {
                    symbol: Symbol(
                        Id {
                            value: 1,
                        },
                    ),
                    actually_qualified: false,
                },
            ),
        ),
    },
)
