src/snapshots/purs_oxide__parser__tests__let_guards.snap
---
source: src/parser.rs
expression: "parse_expr(indoc!(\"\n            let x | true = 1\n            in x\n        \"))"
---
Located(
    SourceSpan {
        start: 0,
        end: 21,
    },
    Let {
        decls: [
            Located(
                SourceSpan {
                    start: 4,
                    end: 16,
                },
                Commented(
                    [],
                    ValueDeclaration(
                        ValueDeclaration {
                            ident: Symbol {
                                [salsa id]: 0,
                                text: "x",
                            },
                            params: [],
                            expr: Guarded(
                                [
                                    GuardedExpr {
                                        guards: [
                                            Expr(
                                                Located(
                                                    SourceSpan {
                                                        start: 8,
                                                        end: 12,
                                                    },
                                                    Literal(
                                                        Boolean(
                                                            true,
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ],
                                        expr: Located(
                                            SourceSpan {
                                                start: 15,
                                                end: 16,
                                            },
                                            Literal(
                                                Integer(
                                                    1,
                                                ),
                                            ),
                                        ),
                                    },
                                ],
                            ),
                        },
                    ),
                ),
            ),
        ],
        body: Located(
            SourceSpan {
                start: 20,
                end: 21,
            },
            Var(
                QualifiedName {
                    [salsa id]: 0,
                    module: None,
                    name: Symbol {
                        [salsa id]: 0,
                        text: "x",
                    },
                },
            ),
        ),
    },
)
